--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="172dp"
         android:fontFamily="sans-serif-black"
-        android:text="App Locker"
+        android:text="@string/be_active"
         android:textColor="@android:color/background_light"
-        android:textSize="30sp"
+        android:textSize="50sp"
         android:textStyle="bold"
         android:typeface="monospace"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,12 +42,28 @@
         android:layout_height="57dp"
         android:layout_marginTop="16dp"
         android:background="@color/colorPrimary"
-        android:text="Update password"
+        android:text="Update # of Steps"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lock_app_btn" />
+
+    <Button
+        android:id="@+id/show_step_counter"
+        android:layout_width="232dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="92dp"
+        android:background="@color/colorPrimary"
+        android:onClick="showCounter"
+        android:text="Show Step Counter"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lock_app_btn" />
 </android.support.constraint.ConstraintLayout>
