--- a/app/src/main/res/drawable/custom_progressbar_drawable.xml
+++ b/app/src/main/res/drawable/custom_progressbar_drawable.xml
@@ -1,19 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromDegrees="-90"
-    android:pivotX="50%"
-    android:pivotY="50%"
-    android:toDegrees="270" >
 
-    <shape
-        android:shape="ring"
-        android:useLevel="false" >
-        <gradient
-            android:centerY="0.5"
-            android:endColor="#FA5858"
-            android:startColor="#0099CC"
-            android:type="sweep"
-            android:useLevel="false" />
-    </shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@android:id/secondaryProgress">
+        <shape
+            android:innerRadiusRatio="6"
+            android:shape="ring"
+            android:thicknessRatio="20.0"
+            android:useLevel="true">
 
-</rotate>
+
+            <gradient
+                android:endColor="#D4D4D4"
+                android:startColor="#F1F1F1"
+                android:type="sweep" />
+        </shape>
+    </item>
+
+    <item android:id="@android:id/progress">
+        <rotate
+            android:fromDegrees="270"
+            android:pivotX="50%"
+            android:pivotY="50%"
+            android:toDegrees="270">
+
+            <shape
+                android:innerRadiusRatio="6"
+                android:shape="ring"
+                android:thicknessRatio="20.0"
+                android:useLevel="true">
+
+
+                <rotate
+                    android:fromDegrees="0"
+                    android:pivotX="50%"
+                    android:pivotY="50%"
+                    android:toDegrees="360" />
+
+                <gradient
+                    android:endColor="#FEFE69"
+                    android:startColor="#57E86B"
+                    android:type="sweep" />
+
+            </shape>
+        </rotate>
+    </item>
+</layer-list>
