--- a/app/src/main/res/layout/activity_step_counter.xml
+++ b/app/src/main/res/layout/activity_step_counter.xml
@@ -10,6 +10,12 @@
     >
 
 
+    <TextView
+        android:id="@+id/tv_info2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Your Goal" />
+
     <ProgressBar
 
         android:id="@+id/progressBarra"
