--- a/app/src/main/res/layout/activity_step_counter.xml
+++ b/app/src/main/res/layout/activity_step_counter.xml
@@ -12,7 +12,7 @@
 
     <TextView
         android:id="@+id/tv_info2"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your Goal" />
 
