--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,68 +23,94 @@
 
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <android.support.design.button.MaterialButton
         android:id="@+id/lock_app_btn"
-        android:background = "@drawable/corners"
+        app:iconTint="@color/colorPrimaryDark"
 
         android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="55dp"
 
+        android:layout_marginTop="30dp"
         android:drawableLeft="@drawable/lock_icon"
         android:paddingLeft="30dip"
-        android:paddingRight="26dip"
 
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:background="@android:color/transparent"
+        app:strokeColor="@color/colorPrimaryDark"
+        android:theme="@style/Theme.MaterialComponents"
+
+        android:paddingRight="26dip"
         android:shadowColor="#00000000"
         android:shadowDx="10"
+
         android:shadowDy="10"
         android:shadowRadius="10"
         android:text="Lock apps"
         android:textAllCaps="true"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:icon="@drawable/lock_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <Button
+
+    <android.support.design.button.MaterialButton
         android:id="@+id/update_pass_btn"
+        app:iconTint="@color/colorPrimaryDark"
+
         android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:background = "@drawable/corners"
+        android:layout_height="55dp"
 
         android:layout_marginTop="24dp"
+
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:background="@android:color/transparent"
+        app:strokeColor="@color/colorPrimaryDark"
+        android:theme="@style/Theme.MaterialComponents"
+
+
         android:drawableLeft="@drawable/settings_icon"
         android:paddingLeft="30dip"
+
         android:paddingRight="26dip"
         android:text="Set step goal"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:icon="@drawable/settings_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lock_app_btn" />
 
-    <Button
+    <android.support.design.button.MaterialButton
         android:id="@+id/show_step_counter"
-        android:background = "@drawable/corners"
         android:layout_width="250dp"
-        android:layout_height="50dp"
+        app:iconTint="@color/colorPrimaryDark"
+
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:background="@android:color/transparent"
+        app:strokeColor="@color/colorPrimaryDark"
+        android:theme="@style/Theme.MaterialComponents"
+
+        android:layout_height="55dp"
         android:layout_marginTop="24dp"
         android:drawableLeft="@drawable/step_icon"
         android:onClick="showCounter"
         android:paddingLeft="30dip"
         android:paddingRight="26dip"
         android:text="Step Progress"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:icon="@drawable/step_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/update_pass_btn" />
 
-    <Button
+    <android.support.design.button.MaterialButton
+        app:icon="@drawable/badge_icon"
         android:id="@+id/show_step_counter2"
         android:layout_width="250dp"
         android:layout_height="50dp"
@@ -94,30 +120,42 @@
         android:paddingLeft="30dip"
         android:paddingRight="26dip"
         android:text="Achievements"
-        android:background = "@drawable/corners"
+        app:iconTint="@color/colorPrimaryDark"
 
-        android:textColor="@color/colorPrimary"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:background="@android:color/transparent"
+        app:strokeColor="@color/colorPrimaryDark"
+        android:theme="@style/Theme.MaterialComponents"
+
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/show_stats" />
 
-    <Button
-        android:background = "@drawable/corners"
-
+    <android.support.design.button.MaterialButton
         android:id="@+id/show_stats"
         android:layout_width="250dp"
-        android:layout_height="50dp"
+
+        android:layout_height="55dp"
+
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:background="@android:color/transparent"
+        app:strokeColor="@color/colorPrimaryDark"
+        android:theme="@style/Theme.MaterialComponents"
+        app:iconTint="@color/colorPrimaryDark"
+
         android:layout_marginTop="24dp"
         android:drawableLeft="@drawable/stats_icon"
         android:onClick="showStats"
         android:paddingLeft="30dip"
         android:paddingRight="26dip"
         android:text="Show Stats"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:icon="@drawable/stats_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/show_step_counter" />
