--- a/app/src/main/res/drawable/step_icon.xml
+++ b/app/src/main/res/drawable/step_icon.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:drawable="@drawable/step_ico"
+        android:drawable="@drawable/lightning"
         android:width="20dp"
         android:height="20dp"
         />
